--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,8 @@ teaser                   : # path of fallback teaser image, e.g. "/assets/images
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : "목표를 향해" # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
+future                   : true
+published                : true
 words_per_minute         : 200
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
